[gd_scene load_steps=7 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://control_scenes/Button.tscn" type="PackedScene" id=2]
[ext_resource path="res://control_scenes/Knob.tscn" type="PackedScene" id=3]
[ext_resource path="res://control_scenes/Slider.tscn" type="PackedScene" id=4]
[ext_resource path="res://control_scenes/Keypad.tscn" type="PackedScene" id=5]
[ext_resource path="res://tiles/blank.png" type="Texture" id=6]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="Button" parent="." index="0" instance=ExtResource( 2 )]

position = Vector2( 133.25, 90 )
frame = 1
playing = true

[node name="Button2" parent="." index="1" instance=ExtResource( 2 )]

position = Vector2( 307.25, 88.25 )
frame = 1
playing = true

[node name="Button3" parent="." index="2" instance=ExtResource( 2 )]

position = Vector2( 209, 88.75 )
playing = true

[node name="Knob" parent="." index="3" instance=ExtResource( 3 )]

position = Vector2( 318.25, 184.75 )

[node name="Knob2" parent="." index="4" instance=ExtResource( 3 )]

position = Vector2( 218.75, 186.25 )

[node name="Knob3" parent="." index="5" instance=ExtResource( 3 )]

position = Vector2( 141.25, 183.25 )

[node name="Slider" parent="." index="6" instance=ExtResource( 4 )]

position = Vector2( 143.25, 265 )

[node name="Slider2" parent="." index="7" instance=ExtResource( 4 )]

position = Vector2( 319.5, 263.25 )

[node name="Slider3" parent="." index="8" instance=ExtResource( 4 )]

position = Vector2( 219.5, 263.75 )

[node name="Keypad" parent="." index="9" instance=ExtResource( 5 )]

position = Vector2( 324.5, 357 )

[node name="Keypad2" parent="." index="10" instance=ExtResource( 5 )]

position = Vector2( 216.5, 354 )

[node name="Keypad3" parent="." index="11" instance=ExtResource( 5 )]

position = Vector2( 138.5, 355 )

[node name="CanvasLayer" type="CanvasLayer" parent="." index="12"]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Background" type="Sprite" parent="CanvasLayer" index="0"]

texture = ExtResource( 6 )


